# easy_ssh-client

./: CMakeLists.txt  Makefile  PREFIX_UPDATE.md  PROJECT_SUMMARY.md  README.md  vpn
config/: example-config.json  test-prefix-config.json
configs/: example_config.json
docs/: COMPARISON.md  SECURITY_AUDIT.md
include/: config_manager.h  connection_manager.h  logger.h  security.h  ssh_client.h  types.h  utils.h
scripts/: install.sh  uninstall.sh
src/: config_manager.cpp  main.cpp  security.cpp  vpn
tests/: test_security.cpp
